Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy imp"
+    "from sqlalchemy import create_engine"
    ]
   },
   {
