Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,8 @@
    "source": [
     "\n",
     "\n",
-    "engine = create_engine('sqlite:///database.s')"
+    "engine = create_engine('sqlite:///database.sqlite',\n",
+    "                      )"
    ]
   },
   {
