--- a/index.ipynb
+++ b/index.ipynb
@@ -370,14 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "engine = create_engine('sqlite:///database.sqlite',\n",
-    "                      )"
+    "engine = create_engine('sqlite:///database.sqlite')"
    ]
   },
   {
