--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,7 @@
    "source": [
     "\n",
     "\n",
-    "engine = create_engine('sqlite:///database.sqlite')"
+    "engine = create_engine('sqlite:///database.sqlite', echo=Fa)"
    ]
   },
   {
