Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -370,13 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "engine = create_engine('sqlite:///database.sqlite', echo=Fa)"
+    "engine = create_engine('sqlite:///database.sqlite', echo=False)"
    ]
   },
   {
