--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_df = None\n",
+    "cards_df = pd.read\n",
     "dust_df = None\n",
     "entourages_df = None\n",
     "mechanics_df = None\n",
