--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_df = pd.read_sql_table()\n",
+    "cards_df = pd.read_sql_table(l)\n",
     "dust_df = None\n",
     "entourages_df = None\n",
     "mechanics_df = None\n",
