--- a/index.ipynb
+++ b/index.ipynb
@@ -399,8 +399,8 @@
    "outputs": [],
    "source": [
     "cards_df = pd.read_sql_table('cards', engine)\n",
-    "dust_df = None\n",
-    "entourages_df = None\n",
+    "dust_df = pd.read_sql_table('dust', engine)\n",
+    "entourages_df = pd.read_sql_table('cards', engine)\n",
     "mechanics_df = None\n",
     "play_requirements_df = None"
    ]
