Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
    "source": [
     "cards_df = pd.read_sql_table('cards', engine)\n",
     "dust_df = pd.read_sql_table('dust', engine)\n",
-    "entourages_df = pd.read_sql_table('cards', engine)\n",
+    "entourages_df = pd.read_sql_table('entourages', engine)\n",
     "mechanics_df = None\n",
     "play_requirements_df = None"
    ]
