Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,10 +418,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2819, 18)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cards_df.shape"
+   ]
   },
   {
    "cell_type": "code",
