Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
     }
    ],
    "source": [
-    "dust_df.set_index(cards_df['card_id'], inplace=True)"
+    "cards_df.set_index"
    ]
   },
   {
