Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -656,22 +656,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4040, 3)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dust_df.set_index('card_id', )"
+    "dust_df.set_index('card_id', inplace=True)"
    ]
   },
   {
@@ -679,7 +668,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m"
+   ]
   },
   {
    "cell_type": "code",
