Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -665,19 +665,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "entourages_df.set_index('card_id')"
+    "entourages_df.set_index('card_id', inplace=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "me"
+   ]
   },
   {
    "cell_type": "markdown",
