--- a/index.ipynb
+++ b/index.ipynb
@@ -677,7 +677,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mechanics_df.set_index('card_id', inplace)"
+   ]
   },
   {
    "cell_type": "markdown",
