Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -674,12 +674,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mechanics_df.set_index('card_id', inplace)"
+    "mechanics_df.set_index('card_id', inplace=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
