Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -686,7 +686,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "play_requirements_df.set_index()"
+   ]
   },
   {
    "cell_type": "markdown",
