Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -687,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "play_requirements_df.set_index()"
+    "play_requirements_df.set_index('card_id', inplace=True)"
    ]
   },
   {
