--- a/index.ipynb
+++ b/index.ipynb
@@ -715,7 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_with_mechanics_df = None\n",
+    "cards_with_mechanics_df = cards_df\n",
     "cards_with_mechanics_df"
    ]
   },
