Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -715,7 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_with_mechanics_df = cards_df\n",
+    "cards_with_mechanics_df = cards_df.join(mechanics_df, how='i')\n",
     "cards_with_mechanics_df"
    ]
   },
