Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2591,7 +2591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -4524,13 +4524,13 @@
        "[2819 rows x 17 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cards_df.sorted"
+    "cards_df"
    ]
   },
   {
