--- a/index.ipynb
+++ b/index.ipynb
@@ -2592,7 +2592,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3026,6 +3028,13 @@
     "* Use `sqlalchemy` to connect to a sqlite database and read in individual tables as DataFrames\n",
     "* Understand and execute the various types of joins (inner, outer, left, and right joins)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
