--- a/index.ipynb
+++ b/index.ipynb
@@ -2978,7 +2978,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "left_join_df = None\n",
+    "left_join_df = cards_with_mechanics_df.join(play_requirements_df, how=)\n",
     "left_join_df"
    ]
   },
